[gd_scene load_steps=4 format=2]

[ext_resource path="res://textures_&_sprites/me_big.png" type="Texture" id=1]
[ext_resource path="res://player.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 15.9276
height = 91.0663

[node name="Player" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -2.04484, -2.12516 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="FireTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="PlayerArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerArea"]
position = Vector2( 2.33597, 1.00114 )
shape = SubResource( 1 )

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 0.01
[connection signal="timeout" from="FireTimer" to="." method="_on_FireTimer_timeout"]
[connection signal="area_shape_entered" from="PlayerArea" to="." method="_on_self_entered"]
